[gd_scene load_steps=3 format=3 uid="uid://d2trrjtc7cgct"]

[ext_resource type="Script" path="res://menu.gd" id="1_45de3"]

[sub_resource type="Theme" id="Theme_d7hr2"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_45de3")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.207843, 0.458824, 0.168627, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -73.5
offset_top = -64.0
offset_right = 73.5
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 28
text = "Bombsweeper"

[node name="Height" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="GridHeightLabel" type="Label" parent="MarginContainer/VBoxContainer/Height"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
size_flags_horizontal = 0
theme = SubResource("Theme_d7hr2")
text = "Height:"

[node name="GridHeightLineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/Height"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
text = "16"

[node name="Width" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="GridWidthLabel" type="Label" parent="MarginContainer/VBoxContainer/Width"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
size_flags_horizontal = 0
theme = SubResource("Theme_d7hr2")
text = "Width:"

[node name="GridWidthLineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/Width"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
text = "16"

[node name="Bombs" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="NumBombsLabel" type="Label" parent="MarginContainer/VBoxContainer/Bombs"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
size_flags_horizontal = 0
theme = SubResource("Theme_d7hr2")
text = "Bombs: "

[node name="NumBombsLineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/Bombs"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
text = "40"

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "PLAY"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "QUIT"

[connection signal="pressed" from="MarginContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
